Availability is calculated dinamycally upon request instead of using DB table created entity ReservationDay and it's ID class ReservationDayIdentity updated tests accordingly