@@ -1,8 +1,10 @@
 package com.upgrade.islandreservationsapi.service;
 
+import com.upgrade.islandreservationsapi.dto.Occupancy;
 import com.upgrade.islandreservationsapi.exception.NoAvailabilityForDateException;
-import com.upgrade.islandreservationsapi.model.DayAvailability;
+import com.upgrade.islandreservationsapi.model.Dates;
 import com.upgrade.islandreservationsapi.model.Reservation;
+import com.upgrade.islandreservationsapi.repository.DatesRepository;
 import com.upgrade.islandreservationsapi.repository.ReservationRepository;
 import org.junit.Before;
 import org.junit.Test;
@@ -15,11 +17,15 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
 
 @RunWith(SpringRunner.class)
 public class ReservationServiceTest {
@@ -35,13 +41,13 @@ public class ReservationServiceTest {
     }
 
     @MockBean
-    private DayAvailabilityService availabilityService;
-
-    @MockBean
     private ReservationRepository reservationRepository;
 
     @MockBean
     private ConfigurationService configurationService;
+
+    @MockBean
+    private DatesRepository datesRepository;
 
     @Autowired
     private ReservationService reservationService;
@@ -49,6 +55,9 @@ public class ReservationServiceTest {
     @Before
     public void init() {
         Mockito.when(configurationService.getMaxAvailability()).thenReturn(100);
+        List<Dates> dates = new ArrayList<>();
+        LocalDate.now().datesUntil(LocalDate.now().plusDays(30)).forEach(d -> dates.add(new Dates(d)));
+        Mockito.when(datesRepository.findAllById(any())).thenReturn(dates);
     }
 
     @Test
@@ -62,11 +71,12 @@ public class ReservationServiceTest {
                 fromDate, toDate, 10);
         reservationWithId.setId(100);
 
-        DayAvailability availability1 = new DayAvailability(fromDate, 90, 100);
-        DayAvailability availability2 = new DayAvailability(toDate, 90, 100);
+        Occupancy o1 = new Occupancy(fromDate, 10);
+        Occupancy o2 = new Occupancy(toDate, 10);
 
         Mockito.when(reservationRepository.save(reservation)).thenReturn(reservationWithId);
-        Mockito.when(availabilityService.updateDayAvailability(reservation)).thenReturn(List.of(availability1, availability2));
+        Mockito.when(reservationRepository.calculateOccupancyByRange(reservation.getStart(), reservation.getEnd()))
+                .thenReturn(List.of(o1, o2));
 
         Reservation createdReservation = reservationService.createReservation(reservation);
 
@@ -85,12 +95,13 @@ public class ReservationServiceTest {
                 fromDate, toDate, 10);
         reservationWithId.setId(100);
 
-        DayAvailability availability1 = new DayAvailability(fromDate, 75, 100);
-        DayAvailability availability2 = new DayAvailability(toDate, 90, 100);
+        Occupancy o1 = new Occupancy(fromDate, 25);
+        Occupancy o2 = new Occupancy(toDate, 10);
 
 
         Mockito.when(reservationRepository.save(reservation)).thenReturn(reservationWithId);
-        Mockito.when(availabilityService.updateDayAvailability(reservation)).thenReturn(List.of(availability1, availability2));
+        Mockito.when(reservationRepository.calculateOccupancyByRange(reservation.getStart(), reservation.getEnd()))
+                .thenReturn(List.of(o1, o2));
 
         Reservation createdReservation = reservationService.createReservation(reservation);
 
@@ -110,10 +121,11 @@ public class ReservationServiceTest {
                 fromDate, toDate, 12);
         newReservation.setId(101);
 
-        DayAvailability a1 = new DayAvailability(fromDate, 88, 100);
+        Occupancy o1 = new Occupancy(fromDate, 12);
 
         Mockito.when(reservationRepository.findAndLockById(101)).thenReturn(Optional.of(existingReservation));
-        Mockito.when(availabilityService.addAvailability(fromDate, toDate, -2)).thenReturn(List.of(a1));
+        Mockito.when(reservationRepository.calculateOccupancyExcludeReservation(fromDate.datesUntil(toDate).collect(Collectors.toList()), existingReservation.getId()))
+                .thenReturn(List.of(o1));
         Mockito.when(reservationRepository.save(existingReservation)).thenReturn(newReservation);
 
         reservationService.updateReservation(newReservation);
@@ -135,15 +147,11 @@ public class ReservationServiceTest {
         Reservation newReservation = new Reservation("John", "Doe", "johndoe@email.com",
                 newFromDate, newToDate, 12);
         newReservation.setId(101);
-
-        DayAvailability a1 = new DayAvailability(newFromDate, 88, 100);
-        DayAvailability a2 = new DayAvailability(fromDate, 88, 100);
-        DayAvailability a3 = new DayAvailability(toDate, 88, 100);
-        List<DayAvailability> newAvailabilities = List.of(a1, a2, a3);
+        List<Occupancy> occupancies = Collections.emptyList();
 
         Mockito.when(reservationRepository.findAndLockById(101)).thenReturn(Optional.of(existingReservation));
-        Mockito.when(availabilityService.addAvailability(fromDate, toDate, 10)).thenReturn(List.of(a2));
-        Mockito.when(availabilityService.updateDayAvailability(newReservation)).thenReturn(newAvailabilities);
+        Mockito.when(reservationRepository.calculateOccupancyExcludeReservation(fromDate.datesUntil(toDate).collect(Collectors.toList()), existingReservation.getId()))
+                .thenReturn(occupancies);
         Mockito.when(reservationRepository.save(existingReservation)).thenReturn(newReservation);
 
         newReservation = reservationService.updateReservation(newReservation);
